[package]
name = "checklog"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
clap = "4.4.7"
rustc-hash = "1.1.0"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "debuginfo"
